[package]
name = "image-spec"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = { version = "~1.0" }
serde = { version = "~1.0", features = ["derive"] }
serde_derive = "1.0.130"
chrono = { version = "~0.4", features = ["serde"] }
sha2 = { version = "~0.9" }
regex = { version = "~1.5" }
digest = { version = "~0.9" }
