[package]
name = "oci-image-spec"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/tosone/image-spec-rs.git"
repository = "https://github.com/tosone/image-spec-rs.git"
keywords = ["image", "spec", "oci"]
description = "The OCI Image Format project creates and maintains the software shipping container image format spec (OCI Image Format)."
license = "MIT"
emil = "i@tosone.cn"

[dependencies]
serde_json = { version = "~1.0" }
serde = { version = "~1.0", features = ["derive"] }
serde_derive = "1.0.130"
chrono = { version = "~0.4", features = ["serde"] }
sha2 = { version = "~0.9" }
regex = { version = "~1.5" }
digest = { version = "~0.9" }
hex = "~0.4"
blake3 = "~1.2"
